Version 2.9 (X X, 2017) - ""
------------------------------------------------------------------------------

*** CORE/CPU *** Thanks to DJRobX
Using GTS80 gen. 2 sound on Excalibur instead of gen. 3, enabling 8910 sounds (thanks to Jim Hernandez for noticing)

Fix some GTS3 DMD animations running too fast

Change some more of the timing for the idle/throttle speed code

Updated to zlib 1.2.10

*** ROM SUPPORT *** Thanks to Flipprojets
Clones:
Amazon Hunt II (French Free Play)
Amazon Hunt III (French Free Play)
Amazon Hunt III (rev. 1 French Free Play)
Arena (Free Play)
Arena (French Free Play)
Arena (German Free Play)
Arena (rev. 1 Free Play)
Bad Girls (Free Play)
Bad Girls (French Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Bad Girls (German Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Big House (Free Play)
Big House (French Free Play)
Big House (German Free Play)
Bone Busters Inc. (Free Play)
Bone Busters Inc. (French Free Play)
Bone Busters Inc. (German Free Play)
Bounty Hunter (Free Play)
Bounty Hunter (German Free Play)
Caveman (Evolution, unofficial MOD)
Chicago Cubs Triple Play (Free Play)
Chicago Cubs Triple Play (rev. 1 Free Play)
Diamond Lady (Free Play)
Diamond Lady (French Free Play)
Diamond Lady (German Free Play)
Excalibur (Free Play)
Excalibur (French Free Play)
Genesis (Free Play)
Genesis (French Free Play)
Genesis (German Free Play)
Gold Wings (Free Play)
Gold Wings (French Free Play)
Gold Wings (German Free Play)
Haunted House (rev. 3 unofficial MOD)
Haunted House (rev. 3 unofficial MOD, LED)
Haunted House (rev. 3 unofficial MOD, LED+Secret Tunnel)
Hollywood Heat (Free Play)
Hollywood Heat (French Free Play)
Hollywood Heat (German Free Play)
Hot Shots (Free Play)        (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))